Added CRUD operations for links
