# apps/backend/src/api/index.ts
@@ -2,6 +2,7 @@ import { Router } from "express";
 import { swaggerRoute } from "./swagger";
 import { pingRoute } from "./ping";
 import { authRoute } from "./auth";
+import { linkRedirectRoute, linkRoute } from "./link";
 
 export const api = (): Router => {
     const router = Router();
@@ -9,6 +10,8 @@ export const api = (): Router => {
     router.use("/api-docs", swaggerRoute());
     router.use("/ping", pingRoute());
     router.use("/auth", authRoute());
+    router.use("/link", linkRoute());
+    router.use(linkRedirectRoute());
 
     return router;
 };
